<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.contactsapp.presentation.fragments.createEditContact.CreateEditContactViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.createEditContact.CreateEditContactFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.fragments.createEditContact.CreateEditContactFragment">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_local_see" />

            <ImageView
                android:id="@+id/createEditFragmentUserImageView"
                android:layout_width="73dp"
                android:layout_height="73dp"
                android:layout_marginStart="34dp"
                android:src="@drawable/ic_avatar"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/change_avatar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/grey"
                android:text="@string/change"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/createEditFragmentUserImageView"
                app:layout_constraintTop_toTopOf="@+id/createEditFragmentUserImageView" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createEditFragmentUserImageView"
                app:srcCompat="@drawable/ic_settings_phone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEditFragmentPhoneNumberOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="52dp"
                android:hint="@string/enter_your_number"
                app:errorText="@{viewModel.contact.phoneNumbers.get(0).phoneError}"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textCursorDrawable="@null"
                    android:inputType="phone"
                    android:text="@={viewModel.contact.phoneNumbers.get(0).phone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEditFragmentPhoneNumberOneType"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/select_phone_type"
                app:errorText="@{viewModel.contact.phoneNumbers.get(0).typeError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/createEditFragmentPhoneNumberOne"
                app:layout_constraintTop_toBottomOf="@+id/createEditFragmentPhoneNumberOne">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="none"
                    android:text="@={viewModel.contact.phoneNumbers.get(0).type}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEditFragmentPhoneNumberSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:hint="@string/enter_your_number"
                app:errorText="@{viewModel.contact.phoneNumbers.get(1).phoneError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/createEditFragmentPhoneNumberOneType">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="phone"
                    android:text="@={viewModel.contact.phoneNumbers.get(1).phone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEditFragmentPhoneNumberTwoType"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/select_phone_type"
                app:errorText="@{viewModel.contact.phoneNumbers.get(1).typeError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/createEditFragmentPhoneNumberOne"
                app:layout_constraintTop_toBottomOf="@+id/createEditFragmentPhoneNumberSecond">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="none"
                    android:text="@={viewModel.contact.phoneNumbers.get(1).type}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEditFragmentName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:hint="@string/type_your_name"
                app:errorText="@{viewModel.contact.nameError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/createEditFragmentPhoneNumberTwoType">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.contact.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEditFragmentEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:hint="@string/type_your_email"
                app:errorText="@{viewModel.contact.emailError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/createEditFragmentName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.contact.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEditFragmentNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:hint="@string/type_your_note"
                app:errorText="@{viewModel.contact.noteError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/createEditFragmentEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:text="@={viewModel.contact.note}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createEditFragmentRingtone"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:hint="@string/choose_your_ringtone"
                app:errorText="@{viewModel.contact.ringtoneError}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/createEditFragmentPhoneNumberOne"
                app:layout_constraintTop_toBottomOf="@+id/createEditFragmentNote">

                <AutoCompleteTextView
                    android:id="@+id/ringtoneChooser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@={viewModel.contact.ringtone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE }"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                android:backgroundTint="@color/grey"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/createEditFragmentRingtone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>